src2/objects/Telefonica_UNICA_Setting__mdt.object
<CustomObject>
    <description>Settings to callout to Telefonica UNICA</description>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>originMsisdn__c</fullName>
        <label>originMsisdn</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>text__c</fullName>
        <label>text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Telefonica UNICA Setting</label>
    <pluralLabel>Telefonica UNICA Settings</pluralLabel>
</CustomObject>